resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: todoapp
  labels:
    app: todoapp
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
      component: backend
  template:
    metadata:
      labels:
        app: todoapp
        component: backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: backend
        image: ghcr.io/noc-tech/todo/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: todoapp
spec:
  selector:
    app: todoapp
    component: backend
  ports:
  - name: http
    port: 3001
    targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: todoapp
  labels:
    app: todoapp
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
      component: frontend
  template:
    metadata:
      labels:
        app: todoapp
        component: frontend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: frontend
        image: ghcr.io/noc-tech/todo/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: todoapp
spec:
  selector:
    app: todoapp
    component: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todoapp.noctech.uk
  namespace: todoapp
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: todoapp-frontend-ingress
spec:
  rules:
    - host: "todoapp.noctech.uk"
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend-service
            servicePort: 80
    - host: "api-todoapp.noctech.uk"
      http:
        paths:
        - path: /
          backend:
            serviceName: backend-service
            servicePort: 3001
